WIP fixing footer using FxLayout - Todolist page still overlaps

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,4 @@
 .footer {
-    position: absolute;
     vertical-align: middle;
     bottom: 0;
     width: 100%;
